同步启动参数以及内存查看